simdata directory fixes for vcell-su cli util.